feat: enhance UI with StatusBadge component for attendance, groups, matches, and notifications; improve layout and styling across auth and dashboard pages